Fix alignment issues.

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -16,6 +16,7 @@
 
   a {
     text-decoration: underline;
+    text-align: justify;
 
     &:hover {
       // text-decoration: underline;
